# tree-sitter-apache-avro

./: CMakeLists.txt  Cargo.toml  Makefile  README.md  package-lock.json  package.json  pyproject.toml  tree-sitter.json
.github/workflows/: publish.yml
bindings/python/tree_sitter_apache_avro/: __init__.py
