[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-apache-avro-unofficial"
description = "Unofficial Apache Avro Language Parser for the IDL Language"
version = "0.1.2"
keywords = ["incremental", "parsing", "tree-sitter", "apache-avro"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Victor Quiroz", email = "git@victorhqc.com" }]
maintainers = [{ name = "Laszlo Babartzy", email = "laszlobabartzy@gmail.com" }]
requires-python = ">=3.10"
license.text = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/victorhqc/tree-sitter-apache-avro"
Repository = "https://github.com/Balara198/tree-sitter-apache-avro"
Upstream = "https://github.com/sebimarkgraf/tree-sitter-apache-avro"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
